--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,8 @@
   <div class="panel-heading">{{group.title}}</div>
   <div class="panel-body">
     <p>{{group.description}}</p>
+    <p>Hälsostatus<span class="badge" style="background-color:red;">Dålig (12 Sjukdagar/år)</span></p>
+    <p>Hälsoutveckling<span class="badge" style="background-color:green">Bra (-3 Sjukdagar/år)</span></p>
     <p>
        <button type="button" class="btn btnAddChallenge" ng-click="goTo('addChallenge')"><i class="glyphicon glyphicon-plus-sign"></i> Add challenge</button>
        </p>
