--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" ng-app="g4lApp">
+<html class="no-js" ng-app="g4lApp" ng-cloak>
   <head>
     <meta charset="utf-8">
     <title>Gaming 4 Life</title>
