--- a/app/index.html
+++ b/app/index.html
@@ -60,13 +60,13 @@
 </div>
 </div>
 
-<div ng-if="currentPage == 'viewGroup'" ng-controller="ViewGroupController">hheeeeej
+<div ng-if="currentPage == 'viewGroup'" ng-controller="ViewGroupController">
  <div class="panel panel-default">
-  <div class="panel-heading">titel! Group Details</div>
-   <div class="panel panel-default" ng-repeat="challange i challenges">
-    <div class="panel-heading">{{challenge.title}}</div>
+  <div class="panel-heading">titel!</div>
+   <div class="panel panel-default" ng-repeat="challange in challenges">
+    <div class="panel-heading">{{challange.title}}</div>
      <div class="panel-body">
-      <p>{{challenge.description}}</p>
+      <p>{{challange.description}}</p>
       <p>
        <button type="button" class="btn btnAddChallenge" ng-click="goTo('addChallenge')"><i class="glyphicon glyphicon-plus-sign"></i> Add challenge</button>
       </p>
