--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
     <div class="panel-heading">{{template.name}} 
        <div class="btn-group pull-right">
        <button type="button" class="btn-sm btn-primary btnAddChallenge" ng-click="goTo('viewGroup')"><i class="glyphicon glyphicon-plus-sign"></i> Lägg till!</button>
-	</div
+	</div>
        </div>
      <div class="panel-body">
       <p>{{template.activity.name}}</p>
