--- a/app/index.html
+++ b/app/index.html
@@ -38,15 +38,19 @@
 
 <div ng-if="currentPage == 'overview'" ng-controller="GroupsController">
 <div class="panel panel-default" ng-repeat="group in groups">
-  <div class="panel-heading">{{group.name}}</div>
+  <div class="panel-heading">{{group.name}}
+   <div class="btn-group pull-right">
+       
+<button type="button" class="btn-sm btn-primary btnAddChallenge" ng-click="goTo('viewGroup')"><i class="glyphicon glyphicon-plus-sign"></i> Group details</button>
+</div>
+</div>
   <div class="panel-body">
     <p>{{group.description}}</p>
     <p>Hälsostatus <span class="badge" style="background-color:red;">Dålig (12 Sjukdagar/år)</span></p>
     <p>Hälsoutveckling <span class="badge" style="background-color:green">Bra (-3 Sjukdagar/år)</span></p>
-    <p>
-       <button type="button" class="btn-sm btn-primary btnAddChallenge" ng-click="goTo('viewGroup')"><i class="glyphicon glyphicon-plus-sign"></i> Group details</button>
-       </p>
-  </div>
+    <p>Medlämmar: {{group.people.length}} av 54 anställda</p>
+     
+</div>
 </div>
 </div>
 
