--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
     <p>{{group.description}}</p>
     <p>Hälsostatus <span class="badge" style="background-color:red;">Dålig (12 Sjukdagar/år)</span></p>
     <p>Hälsoutveckling <span class="badge" style="background-color:green">Bra (-3 Sjukdagar/år)</span></p>
-    <p>Medlämmar: {{group.people.length}} av 54 anställda</p>
+    <p>Medlemmar: {{group.people.length}} av 54 anställda</p>
      
 </div>
 </div>
